# affinity-groups-slackbot

./: .coveragerc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .tool-versions  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.py  groups_read.py  groups_write.py  handler.py  pyproject.toml  pytest.ini  renovate.json  requirements.txt
.circleci/: config.yml
.github/workflows/: aws-ecr.yml  test.yml  validate.yml
app/: __init__.py  app.py  bot.py  groups_read.py  groups_write.py  handler.py
test/: test_bot.py  test_group_read.py  test_group_write.py  test_suite_runs.py
