[tool.poetry]
name = "affinity-groups-slackbot"
description = ""
authors = ["TrussWorks, Inc. <why@truss.works>"]
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13.0"
slackclient = "^2.9.4"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
